--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "type": "module",
   "main": "server.js",
   "packageManager": "yarn@4.4.0",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "@node-loader/http": "^2.0.0",
     "dotenv": "^16.4.5",
